css/style.css
/*css reset*/
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}




/*actual css starts here*/

/*page layout*/
.container {
    display: flex;
    flex-direction: column;
    min-width: 100%;
}

.container>* {
    min-height: 100vh;
}

.about-container {
    display: grid;
    grid-template-columns: 10fr 9fr 4fr;
    grid-template-rows: 1fr 1fr 3fr 1fr 1fr;
    height: 60vh;
    width: 80%;
    margin:100px auto auto auto;
}

.about-container img {
    grid-area: 1 / 1 / span 5/ span 1;
    height: 100%;
    width: 100%;
}

.about-container h3 {
    grid-area: 2/ 2/ span 1 / span 1;
}

.card {
    grid-area: 2 / 2 / span 3 / span 2;
}

.about-links {
    grid-area: 4 / 3 / span 1 / span 1;
    display: flex;
}

.about-container p {
    grid-area: 3 / 2 / span 1 / span 2;
}

.projects>* {
    margin: 10px 50px;   
}

.projects>div {
    margin-top: 40px;
}

.main {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    min-height: 70vh;
    column-gap: 6%;
    row-gap: 40px;
    justify-content: space-between;
}

.project {
    border: 1px solid black;
    height: 50vh;
    width: 25%;
}

.screenshot {
    background-color: blue;
    height: 55%;
}

.desc {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 20% auto;
    justify-content: space-between;
    height: 40%;
}

.proj-name {
    grid-column: 1 / span 1;
    grid-row: 1 / span 1;
}

.proj-links {
    grid-area: 1 / 2 / span 1 / span 1;
    display: flex;
    justify-content: end;
}

.proj-desc {
    grid-area: 2 / 1 / span 1 / span 2;
}

.contact-me {
    display: flex;
    flex-direction: row;
}

.contact-me>* {
    flex-grow: 1;
}

.contact {
    justify-self: center;
    align-self: center;
    display: flex;
    flex-direction: column;
    align-items: end;
    margin-right: 50px;
}



/*styling*/

/*about me*/

.card {
    -webkit-box-shadow: -2px 1px 15px 4px rgba(0,0,0,0.33); 
    box-shadow: -2px 1px 15px 4px rgba(0,0,0,0.33);
}
.about h3 {
    font-size: 3rem;
    margin: 20px;
}

.about .headshot {
    -webkit-box-shadow: 3px 1px 15px 4px rgba(0,0,0,0.25); 
    box-shadow: 3px 1px 15px 4px rgba(0,0,0,0.25);
    z-index: 10;
}

.about p {
    margin: 20px;
    line-height: 1.6;
}

.about-links img {
    height: 65px;
    margin: 10px;
}


/*projects*/
.proj-links img {
    height: 30px;
    margin: 5px;
}

.proj-name h4 {
    margin: 10px 20px;
    font-size: 1.5rem;
}

.proj-desc p {
    margin: 15px;
}

.projects>div>h3 {
    font-size: 2rem;
    margin-bottom: 30px;
}

/*contact me*/
.contact-me .headshot img {
    height: 600px;
}

.links {
    display: flex;
}
.links img {
    height: 40px;
}

.contact p {
    margin: 12px;
}

.contact h3 {
    margin-bottom: 20px;
    font-size: 2rem;
}

.contact-me .headshot {
    align-self:center;
}

.contact p img {
    height: 22px;
}

